@@ -6,6 +6,8 @@ Revision 0.2.1, released XX-05-2017
   (via new --log-level option)
 - Log SNMP authentication failures
 - Added timestamping to file log
+- The plugin-options setting fixed to support a list of options,
+  as its name suggests
 - Fixed malformed timestamp logging at the logger plugin
 
 Revision 0.2.0, released 16-05-2017
